RESOLVED FIXED134349
[MSE] Refactoring: Differentiate between SampleMap decode and presentation order methods
https://bugs.webkit.org/show_bug.cgi?id=134349
Summary [MSE] Refactoring: Differentiate between SampleMap decode and presentation or...
Jer Noble
Reported 2014-06-26 10:26:31 PDT
[MSE] Refactoring: Differentiate between SampleMap decode and presentation order methods
Attachments
Patch (31.73 KB, patch)
2014-06-26 10:45 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2014-06-26 10:45:03 PDT
WebKit Commit Bot
Comment 2 2014-06-26 10:46:19 PDT
Attachment 233913 [details] did not pass style-queue: ERROR: Source/WebCore/Modules/mediasource/SampleMap.h:69: reverse_iterator is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3 2014-06-26 10:48:03 PDT
Comment on attachment 233913 [details] Patch r=me
Jer Noble
Comment 4 2014-06-26 11:17:59 PDT
Comment on attachment 233913 [details] Patch Clearing flags on attachment: 233913 Committed r170484: <http://trac.webkit.org/changeset/170484>
Jer Noble
Comment 5 2014-06-26 11:18:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.