Source/WebCore/Modules/mediasource/SampleMap.cpp
@@ -32,28 +32,32 @@
 
 namespace WebCore {
 
+template <typename M>
 class SampleIsLessThanMediaTimeComparator {
 public:
-    bool operator()(const SampleMap::MapType::value_type& value, const MediaTime& time)
+    typedef typename M::value_type value_type;
+    bool operator()(const value_type& value, const MediaTime& time)
     {
         MediaTime presentationEndTime = value.second->presentationTime() + value.second->duration();
         return presentationEndTime <= time;
     }
-    bool operator()(const MediaTime& time, const SampleMap::MapType::value_type& value)
+    bool operator()(const MediaTime& time, const value_type& value)
     {
         MediaTime presentationStartTime = value.second->presentationTime();
         return time < presentationStartTime;
     }
 };
 
+template <typename M>
 class SampleIsGreaterThanMediaTimeComparator {
 public:
-    bool operator()(const SampleMap::MapType::value_type& value, const MediaTime& time)
+    typedef typename M::value_type value_type;
+    bool operator()(const value_type& value, const MediaTime& time)
     {
         MediaTime presentationStartTime = value.second->presentationTime();
         return presentationStartTime > time;
     }
-    bool operator()(const MediaTime& time, const SampleMap::MapType::value_type& value)
+    bool operator()(const MediaTime& time, const value_type& value)
     {
         MediaTime presentationEndTime = value.second->presentationTime() + value.second->duration();
         return time >= presentationEndTime;
@@ -94,8 +98,8 @@ struct SamplePresentationTimeIsWithinRangeComparator {
 
 void SampleMap::clear()
 {
-    m_presentationSamples.clear();
-    m_decodeSamples.clear();
+    presentationOrder().m_samples.clear();
+    decodeOrder().m_samples.clear();
     m_totalSize = 0;
 }
 
@@ -103,8 +107,8 @@ void SampleMap::addSample(PassRefPtr<MediaSample> prpSample)
 {
     RefPtr<MediaSample> sample = prpSample;
     ASSERT(sample);
-    m_presentationSamples.insert(MapType::value_type(sample->presentationTime(), sample));
-    m_decodeSamples.insert(MapType::value_type(sample->decodeTime(), sample));
+    presentationOrder().m_samples.insert(PresentationOrderSampleMap::MapType::value_type(sample->presentationTime(), sample));
+    decodeOrder().m_samples.insert(DecodeOrderSampleMap::MapType::value_type(sample->decodeTime(), sample));
 
     m_totalSize += sample->sizeInBytes();
 }
@@ -112,107 +116,107 @@ void SampleMap::addSample(PassRefPtr<MediaSample> prpSample)
 void SampleMap::removeSample(MediaSample* sample)
 {
     ASSERT(sample);
-    m_presentationSamples.erase(sample->presentationTime());
-    m_decodeSamples.erase(sample->decodeTime());
+    presentationOrder().m_samples.erase(sample->presentationTime());
+    decodeOrder().m_samples.erase(sample->decodeTime());
 
     m_totalSize -= sample->sizeInBytes();
 }
 
-SampleMap::iterator SampleMap::findSampleContainingPresentationTime(const MediaTime& time)
+PresentationOrderSampleMap::iterator PresentationOrderSampleMap::findSampleContainingPresentationTime(const MediaTime& time)
 {
-    auto range = std::equal_range(presentationBegin(), presentationEnd(), time, SampleIsLessThanMediaTimeComparator());
+    auto range = std::equal_range(begin(), end(), time, SampleIsLessThanMediaTimeComparator<MapType>());
     if (range.first == range.second)
-        return presentationEnd();
+        return end();
     return range.first;
 }
 
-SampleMap::iterator SampleMap::findSampleAfterPresentationTime(const MediaTime& time)
+PresentationOrderSampleMap::iterator PresentationOrderSampleMap::findSampleAfterPresentationTime(const MediaTime& time)
 {
-    return std::lower_bound(presentationBegin(), presentationEnd(), time, SampleIsLessThanMediaTimeComparator());
+    return std::lower_bound(begin(), end(), time, SampleIsLessThanMediaTimeComparator<MapType>());
 }
 
-SampleMap::iterator SampleMap::findSampleWithDecodeTime(const MediaTime& time)
+DecodeOrderSampleMap::iterator DecodeOrderSampleMap::findSampleWithDecodeTime(const MediaTime& time)
 {
-    return m_decodeSamples.find(time);
+    return m_samples.find(time);
 }
 
-SampleMap::reverse_iterator SampleMap::reverseFindSampleContainingPresentationTime(const MediaTime& time)
+PresentationOrderSampleMap::reverse_iterator PresentationOrderSampleMap::reverseFindSampleContainingPresentationTime(const MediaTime& time)
 {
-    auto range = std::equal_range(reversePresentationBegin(), reversePresentationEnd(), time, SampleIsGreaterThanMediaTimeComparator());
+    auto range = std::equal_range(rbegin(), rend(), time, SampleIsGreaterThanMediaTimeComparator<MapType>());
     if (range.first == range.second)
-        return reversePresentationEnd();
+        return rend();
     return range.first;
 }
 
-SampleMap::reverse_iterator SampleMap::reverseFindSampleBeforePresentationTime(const MediaTime& time)
+PresentationOrderSampleMap::reverse_iterator PresentationOrderSampleMap::reverseFindSampleBeforePresentationTime(const MediaTime& time)
 {
-    return std::lower_bound(reversePresentationBegin(), reversePresentationEnd(), time, SampleIsGreaterThanMediaTimeComparator());
+    return std::lower_bound(rbegin(), rend(), time, SampleIsGreaterThanMediaTimeComparator<MapType>());
 }
 
-SampleMap::reverse_iterator SampleMap::reverseFindSampleWithDecodeTime(const MediaTime& time)
+DecodeOrderSampleMap::reverse_iterator DecodeOrderSampleMap::reverseFindSampleWithDecodeTime(const MediaTime& time)
 {
-    SampleMap::iterator found = findSampleWithDecodeTime(time);
-    if (found == decodeEnd())
-        return reverseDecodeEnd();
+    DecodeOrderSampleMap::iterator found = findSampleWithDecodeTime(time);
+    if (found == end())
+        return rend();
     return --reverse_iterator(found);
 }
 
-SampleMap::reverse_iterator SampleMap::findSyncSamplePriorToPresentationTime(const MediaTime& time, const MediaTime& threshold)
+DecodeOrderSampleMap::reverse_iterator DecodeOrderSampleMap::findSyncSamplePriorToPresentationTime(const MediaTime& time, const MediaTime& threshold)
 {
-    reverse_iterator reverseCurrentSamplePTS = reverseFindSampleBeforePresentationTime(time);
-    if (reverseCurrentSamplePTS == reversePresentationEnd())
-        return reverseDecodeEnd();
+    PresentationOrderSampleMap::reverse_iterator reverseCurrentSamplePTS = m_presentationOrder.reverseFindSampleBeforePresentationTime(time);
+    if (reverseCurrentSamplePTS == m_presentationOrder.rend())
+        return rend();
 
     reverse_iterator reverseCurrentSampleDTS = reverseFindSampleWithDecodeTime(reverseCurrentSamplePTS->second->decodeTime());
 
     reverse_iterator foundSample = findSyncSamplePriorToDecodeIterator(reverseCurrentSampleDTS);
-    if (foundSample == reverseDecodeEnd())
-        return reverseDecodeEnd();
+    if (foundSample == rend())
+        return rend();
     if (foundSample->second->presentationTime() < time - threshold)
-        return reverseDecodeEnd();
+        return rend();
     return foundSample;
 }
 
-SampleMap::reverse_iterator SampleMap::findSyncSamplePriorToDecodeIterator(reverse_iterator iterator)
+DecodeOrderSampleMap::reverse_iterator DecodeOrderSampleMap::findSyncSamplePriorToDecodeIterator(reverse_iterator iterator)
 {
-    return std::find_if(iterator, reverseDecodeEnd(), SampleIsRandomAccess());
+    return std::find_if(iterator, rend(), SampleIsRandomAccess());
 }
 
-SampleMap::iterator SampleMap::findSyncSampleAfterPresentationTime(const MediaTime& time, const MediaTime& threshold)
+DecodeOrderSampleMap::iterator DecodeOrderSampleMap::findSyncSampleAfterPresentationTime(const MediaTime& time, const MediaTime& threshold)
 {
-    iterator currentSamplePTS = findSampleAfterPresentationTime(time);
-    if (currentSamplePTS == presentationEnd())
-        return decodeEnd();
+    PresentationOrderSampleMap::iterator currentSamplePTS = m_presentationOrder.findSampleAfterPresentationTime(time);
+    if (currentSamplePTS == m_presentationOrder.end())
+        return end();
 
     iterator currentSampleDTS = findSampleWithDecodeTime(currentSamplePTS->second->decodeTime());
     
     MediaTime upperBound = time + threshold;
-    iterator foundSample = std::find_if(currentSampleDTS, decodeEnd(), SampleIsRandomAccess());
-    if (foundSample == decodeEnd())
-        return decodeEnd();
+    iterator foundSample = std::find_if(currentSampleDTS, end(), SampleIsRandomAccess());
+    if (foundSample == end())
+        return end();
     if (foundSample->second->presentationTime() > upperBound)
-        return decodeEnd();
+        return end();
     return foundSample;
 }
 
-SampleMap::iterator SampleMap::findSyncSampleAfterDecodeIterator(iterator currentSampleDTS)
+DecodeOrderSampleMap::iterator DecodeOrderSampleMap::findSyncSampleAfterDecodeIterator(iterator currentSampleDTS)
 {
-    return std::find_if(currentSampleDTS, decodeEnd(), SampleIsRandomAccess());
+    return std::find_if(currentSampleDTS, end(), SampleIsRandomAccess());
 }
 
-SampleMap::iterator_range SampleMap::findSamplesBetweenPresentationTimes(const MediaTime& begin, const MediaTime& end)
+PresentationOrderSampleMap::iterator_range PresentationOrderSampleMap::findSamplesBetweenPresentationTimes(const MediaTime& beginTime, const MediaTime& endTime)
 {
-    std::pair<MediaTime, MediaTime> range(begin, end);
-    return std::equal_range(presentationBegin(), presentationEnd(), range, SamplePresentationTimeIsInsideRangeComparator());
+    std::pair<MediaTime, MediaTime> range(beginTime, endTime);
+    return std::equal_range(begin(), end(), range, SamplePresentationTimeIsInsideRangeComparator());
 }
 
-SampleMap::iterator_range SampleMap::findSamplesWithinPresentationRange(const MediaTime& begin, const MediaTime& end)
+PresentationOrderSampleMap::iterator_range PresentationOrderSampleMap::findSamplesWithinPresentationRange(const MediaTime& beginTime, const MediaTime& endTime)
 {
-    std::pair<MediaTime, MediaTime> range(begin, end);
-    return std::equal_range(presentationBegin(), presentationEnd(), range, SamplePresentationTimeIsWithinRangeComparator());
+    std::pair<MediaTime, MediaTime> range(beginTime, endTime);
+    return std::equal_range(begin(), end(), range, SamplePresentationTimeIsWithinRangeComparator());
 }
 
-SampleMap::reverse_iterator_range SampleMap::findDependentSamples(MediaSample* sample)
+DecodeOrderSampleMap::reverse_iterator_range DecodeOrderSampleMap::findDependentSamples(MediaSample* sample)
 {
     ASSERT(sample);
     reverse_iterator currentDecodeIter = reverseFindSampleWithDecodeTime(sample->decodeTime());
